feat(lawyer): layout finished

--- a/config/locales/model.pt-BR.yml
+++ b/config/locales/model.pt-BR.yml
@@ -3,6 +3,7 @@ pt-BR:
     models:
       user: Cliente
       lawyer: Advogado
+      request: Pedido
     attributes:
       user:
         login: "Entrar"
